[package]
name = "nomt-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
nomt = { version = "1.0.2", default-features = false, features = ["borsh", "serde", "sha2-hasher", ] }
anyhow = { version = "1.0.100" }


tempfile = "3.19.1"
sha2 = "0.10.8"
hex = "0.4.3"
tokio = { version = "1.45.1", features = ["full"] }
tracing = { version = "0.1.43" }
rand = { version = "0.9.2" }
tracing-subscriber = { version = "0.3.22" }
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "rollup_emulator"
path = "src/bin/rollup_emulator.rs"

[dev-dependencies]

[profile.release]
debug = 1

# [patch.crates-io]
# nomt = { path = "../nomt/nomt" }
